--- a/bit manipulation/readme
+++ b/bit manipulation/readme
@@ -1,1 +1,4 @@
-把一个整数减去1之后再和原来的整数做位与运算，得到的结果相当于把整数的二进制表示中最右边的1变成0.很多位运算问题可以利用这个思路。如leetcode191、231、342
+把一个整数减去1之后再和原来的整数做位与运算，得到的结果相当于把整数的二进制表示中最右边的1变成0.很多位运算问题可以利用这个思路。
+如leetcode191、231、342.
+
+异或运算相关：leetcode477
